Fix header hid behind menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -691,3 +691,7 @@ section {
     margin: 0;
   }
 }
+
+section[id] {
+  scroll-margin-top: 100px;
+}
